Agregar sección de banner y pie de página

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <section class="banner">
+        <h2>Ofertas Especiales en Tecnología</h2>
+        <p>Encuentra los mejores productos al mejor precio</p>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 Tienda Tech - Todos los derechos reservados</p>
+    </footer>
   </body>
 </html>
