Añadir sección de filtros y productos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
         <h2>Ofertas Especiales en Tecnología</h2>
         <p>Encuentra los mejores productos al mejor precio</p>
       </section>
+
+      <section class="filtros">
+        <input type="text" id="search" placeholder="Buscar producto..." />
+        <select id="sort">
+          <option value="">Ordenar por</option>
+          <option value="asc">Precio: Menor a Mayor</option>
+          <option value="desc">Precio: Mayor a Menor</option>
+        </select>
+        <button id="reset">Reiniciar</button>
+      </section>
+
+      <section class="productos">
+        <h2>Nuestros Productos</h2>
+        <ul id="product-list"></ul>
+      </section>
     </main>
 
     <footer>
