--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
     <footer>
       <p>© 2025 Tienda Tech - Todos los derechos reservados</p>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
